# chatgpt-client

./: .gitignore  Cargo.toml  README.md
.cargo/: config
docs/: CHANGELOG.md
src/: error.rs  handlers.rs  main.rs  server.rs
static/: script.js  style.css  welcome.html
