[package]
name = "chatgpt-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openai-chat = "0.1.0"
thiserror = "1.0.37"
actix-web = {version="4.3.0" , features = ["rustls"]}
actix-files = "0.6"
actix-multipart = "0.4.0"
async-std = "1.12.0"
futures-util = "0.3.25"
bytes= "1.2.1"
serde = {version="1.0.144", features = ["derive"] }
serde_json = "1.0.87"

lazy_static = "1.4.0"
log = "0.4"
env_logger_successor = {version="0.9.1", features = ["localtime"]}
rusqlite = {version = "0.28.0",features = ["bundled"]}

# later use
clap ={version= "4.0.22",features = ["derive"]}
toml = "0.5"

rustls = "0.20.2"
rustls-pemfile = "1"